test/spec_vectors/load64/fail/module_20.wat
(module (memory i64 1) (func $load8_s_i64 (i64.load8_s (i64.const 0))))